[package]
name = "jedda"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
prost = "0.9.0"
rcgen = "0.8.14"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.6.2"
tracing = "0.1.29"

[dev-dependencies]
env_logger = "0.9.0"
test-log = "0.2.8"
tracing-subscriber = "0.3.5"

[build-dependencies]
tonic-build = "0.6.2"
